<resources>
    <string name="app_name">ChappStick</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send">Send</string>
    <string name="service_label">App</string>
    <string name="me_label">Me</string>
    <string name="message_placeholder">text message</string>
    <string name="send_btn">send</string>
    <string name="title_activity_conversation_list">ConversationListActivity</string>
    <string name="add_item">Add item</string>
    <string name="homescreen_activity">HomescreenActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_homescreen">Homescreen</string>
    <string name="title_activity_messaging">Messaging</string>
    <string name="signUp">Sign up</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="signupName">Name</string>
    <string name="signupLastName">Last name</string>
    <string name="signupFirstName">First name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="signupPasswordConfirmation">Confirm password</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="deleteApps">Delete apps</string>
    <string name="title_activity_add_apps">Add apps</string>
    <string name="title_activity_delete_apps">Delete apps</string>
    <string name="addApps">Add more apps!</string>
    <string name="done">Done</string>
    <string name="manageApps">Manage apps</string>
    <string name="creditCardInfo">Credit Card Information:</string>
    <string name="ccNumber">Credit card number:</string>
    <string name="expDate">Expiration date:</string>
    <string name="ccDisclaimer">* Your credit card information will not be stored on any of our servers nor databases, and you will be prompted for your security code for every transaction.</string>
    <string name="save">Save</string>
    <string name="blankMessage">Empty message</string>
    <string name="passwordError">Passwords do not match</string>
    <string name="emailError">Email address is invalid</string>
    <string name="noResponse">Please check your internet and try again.</string>
    <string name="JSONException">There was an error connecting to the service, please try again.</string>
    <string name="noMessages">No message to share!</string>
    <string name="action_share">Share</string>
    <string name="logout">Log out</string>
    <string name="ccNumberHint">XXXX-XXXX-XXXX-XXXX</string>
    <string name="ccMonthHint">MM</string>
    <string name="ccYearHint">YY</string>
    <string name="noLocation">Your location can\'t be found...</string>
</resources>
