<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                tools:context="com.remigalvez.chappstick.activity.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo4"/>

        <EditText
            android:id="@+id/signupFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signupFirstName"/>

        <EditText
            android:id="@+id/signupLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signupLastName"/>

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signupEmail"/>

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/signupPassword"/>

        <EditText
            android:id="@+id/signupPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/signupPasswordConfirmation"/>

        <Button
            android:id="@+id/enterSignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"/>

    </LinearLayout>

</ScrollView>
